Fix Hero on mobile

--- a/src/components/home/Hero/index.module.css
+++ b/src/components/home/Hero/index.module.css
@@ -1,11 +1,5 @@
 .root {
-  padding: 112px 28px;
-}
-
-.images {
-  display: grid;
-  grid-template-columns: 25% 25% auto;
-  grid-column-gap: 28px;
+  padding: 112px 20px 56px;
 }
 
 .content {
@@ -16,16 +10,68 @@
 }
 
 .title {
-  margin-bottom: 112px;
+  margin-bottom: 56px;
 }
 
 .text {
   width: 100%;
   max-width: 578px;
-  margin-left: auto;
-  margin-bottom: 112px;
+  margin-bottom: 56px;
 }
 
 .textParagraph:not(:last-child) {
-  margin-bottom: 28px;
+  margin-bottom: 20px;
+}
+
+.images {
+  display: grid;
+  grid-template-rows: 168px 168px 224px;
+  grid-row-gap: 20px;
+}
+
+.image {
+  position: relative;
+  overflow-y: hidden;
+}
+
+.image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #045cfc;
+  mix-blend-mode: overlay;
+}
+
+@media (min-width: 321px) {
+  .root {
+    padding: 112px 28px;
+  }
+
+  .title {
+    margin-bottom: 112px;
+  }
+
+  .text {
+    margin-left: auto;
+    margin-bottom: 112px;
+  }
+
+  .textParagraph:not(:last-child) {
+    margin-bottom: 28px;
+  }
+
+  .images {
+    max-height: 452px;
+    grid-template-columns: 25% 25% auto;
+    grid-template-rows: initial;
+    grid-column-gap: 28px;
+    grid-row-gap: initial;
+  }
+
+  .image {
+    overflow-y: ;
+  }
 }
